# gitingest

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  compose.yml  eslint.config.cjs  package-lock.json  package.json  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements.txt  tailwind.config.js
.docker/minio/: setup.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  deploy-pr.yml  docker-build.ecr.yml  docker-build.ghcr.yml  docker_image.yml  pr-title-check.yml  publish.yml  publish_to_pypi.yml  rebase-needed.yml  release-please.yml  scorecard.yml  stale.yml
src/gitingest/: __init__.py  __main__.py  cli.py  clone.py  cloning.py  config.py  entrypoint.py  ingestion.py  output_formatter.py  output_formatters.py  query_parser.py  query_parsing.py
src/gitingest/schemas/: __init__.py  cloning.py  filesystem.py  ingestion.py  ingestion_schema.py
src/gitingest/utils/: __init__.py  auth.py  compat_func.py  compat_typing.py  exceptions.py  file_utils.py  git_utils.py  ignore_patterns.py  ingestion_utils.py  logging_config.py  notebook.py  os_utils.py  path_utils.py  pattern_utils.py  query_parser_utils.py  timeout_wrapper.py
src/server/: __main__.py  form_types.py  main.py  metrics_server.py  models.py  query_processor.py  routers_utils.py  s3_utils.py  server_config.py  server_utils.py
src/server/routers/: __init__.py  download.py  dynamic.py  index.py  ingest.py
src/server/templates/: base.jinja  git.jinja  index.jinja  swagger_ui.jinja
src/server/templates/components/: _macros.jinja  badge_new.jinja  footer.jinja  git_form.jinja  navbar.jinja  result.jinja  tailwind_components.html
src/static/: llm.txt  llms.txt  robots.txt
src/static/css/: tailwind.css
src/static/js/: git.js  git_form.js  index.js  navbar.js  posthog.js  utils.js
tests/: __init__.py  conftest.py  test_cli.py  test_clone.py  test_flow_integration.py  test_git_utils.py  test_gitignore_feature.py  test_ingestion.py  test_ingestion_utils.py  test_notebook_utils.py  test_pattern_utils.py  test_repository_clone.py  test_summary.py
tests/query_parser/: __init__.py  test_git_host_agnostic.py  test_query_parser.py
tests/server/: __init__.py  test_flow_integration.py
